# Kafin

./: .cursorrules  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Agent.md  CHANGELOG.md  CHANGELOG_COMPLETE.md  CLAUDE.md  Entwickler-Fundament.md  Plattform-Spezifikation-v2.md  README.md  STATUS.md  Status.md  Trade.md  bot.md  docker-compose.yml  openapi.json  pyproject.toml  requirements.txt  research.md  test_sunday.py
agents/: __init__.py  common.py
apps/: __init__.py
backend/: .dockerignore  Dockerfile  conftest.py  requirements.txt  test_server.py  test_supabase_connection.py
calibration/: current_weights.json
config/: alerts.yaml  apis.yaml  scoring.yaml  settings.yaml
data/: __init__.py  quality.py
database/: schema.sql
docs/: AGENT_CONTEXT.md  ARCHITECTURE.md  ARCHITECTURE_COMPLETE.md  ASYNC_PERFORMANCE.md  BUGFIXES_v6.2.4.md  CONTRARIAN_TRADING.md  DATA_STRATEGY.md  DOCKER_PORTS.md  FUTURE.md  IMPLEMENTATION_SUMMARY.md  MOCK_DATA_POLICY.md  N8N_SETUP_GUIDE.md  N8N_WORKFLOWS.md  OS_MIGRATION_CONTEXT.md  QUICK_REFERENCE.md  REPOSITORY_HEALTH.md  ROADMAP.md  SPEC.md  SPEC_COMPLETE.md  TODO.md  WATCHLIST_SYSTEM.md
fixtures/: finnhub_earnings.json  market_overview.json
frontend/: .dockerignore  Dockerfile  README.md  env.local.txt  next.config.ts  package-lock.json  package.json
journal/: 2026-05-18.md
pipeline/: __init__.py  audit.py  checkpointer.py  config.py  graph.py  langgraph_builder.py  run.py  state.py
prompts/: README.md  audit_report.md  btc_report.md  macro_header.md  master.md  morning_briefing.md  (+3 more)
(+249 files in other folders)
