[project]
name = "trading-research-platform"
version = "0.1.0"
description = "Local-first trading research and audit platform scaffold."
requires-python = ">=3.11"
dependencies = [
  "apscheduler>=3.10",
  "fastapi>=0.115",
  "langchain-openai>=0.2",
  "langgraph>=0.2",
  "pandas>=2.2",
  "psycopg[binary]>=3.2",
  "pydantic>=2.8",
  "python-multipart>=0.0.9",
  "python-dotenv>=1.0",
  "redis>=5.0",
  "streamlit>=1.38",
  "torch>=2.4",
  "transformers>=4.46",
  "uvicorn[standard]>=0.30",
  "yfinance>=0.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "ruff>=0.6",
]

[project.scripts]
platform-run = "pipeline.run:main"
platform-replay = "scripts.replay:main"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["apps*", "agents*", "pipeline*", "data*", "scripts*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
